--- a/user-registration/src/app/user-item/user-item.component.html
+++ b/user-registration/src/app/user-item/user-item.component.html
@@ -1,6 +1,14 @@
 <div class="container">
-<div class="user-card">
-<h3>Name : {{user.name}}</h3>
-<p>Email: {{user.email}}</p>
-</div>
+  <div class="user-card">
+    <h3>Name : {{ user.name }}</h3>
+    <p>Email: {{ user.email }}</p>
+    <div class="card-actions">
+      <button class="edit-btn" (click)="openEditPopup()" title="Edit">
+        <i class="fas fa-edit"></i>
+      </button>
+      <button class="delete-btn" (click)="onDelete()" title="Delete">
+        <i class="fas fa-trash-alt"></i>
+      </button>
+    </div>
+  </div>
 </div>
